--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ if (WIN32)
     # On linux
 else ()
     list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)
+
     # Find and link SDL2
     find_package(SDL2 REQUIRED)
     target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
@@ -77,23 +78,15 @@ else ()
     target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_IMAGE_INCLUDE_DIRS})
     target_link_libraries(${PROJECT_NAME} ${SDL2_IMAGE_LIBRARIES})
 
-    # Find and link SDL2_gfx
+    # Find and link SDL2_ttf
     find_package(SDL2_ttf REQUIRED)
     target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_TTF_INCLUDE_DIRS})
     target_link_libraries(${PROJECT_NAME} ${SDL2_TTF_LIBRARIES})
-
-
-    # If doesnt work, try this
-    # find_package(SDL2_image REQUIRED)
-    # find_package(SDL2_ttf REQUIRED)
 endif ()
-
-# can be cleaner with : https://github.com/aminosbh/sdl2-cmake-modules
 
 # /////////////////////////////////////////////////////////////////////////////
 # /////////////////////////////////// BUILD ///////////////////////////////////
 # /////////////////////////////////////////////////////////////////////////////
-
 
 target_include_directories(${TARGET_NAME} PUBLIC ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL2TTF_INCLUDE_DIRS})
 target_link_libraries(${TARGET_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES})
